--- a/SchmersalSampleAppLib/SchmersalSampleAppLib.csproj
+++ b/SchmersalSampleAppLib/SchmersalSampleAppLib.csproj
@@ -1,15 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="SchmersalSampleAppLib\**" />
-    <Content Remove="SchmersalSampleAppLib\**" />
-    <EmbeddedResource Remove="SchmersalSampleAppLib\**" />
-    <None Remove="SchmersalSampleAppLib\**" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.32">
@@ -23,12 +16,5 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="SchmersalSampleAppLib">
-      <HintPath>SchmersalSampleAppLib\bin\Debug\netcoreapp3.1\SchmersalSampleAppLib.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-
 
 </Project>
